third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/borrow_local_combo.no-opt.exp

Diagnostics:
error: cannot mutably borrow since immutable references exist
   ┌─ tests/reference-safety/v1-tests/borrow_local_combo.move:13:17
   │
12 │         if (cond) f = &s.f else f = &other.f;
   │                       ----
   │                       ││
   │                       │previous local borrow
   │                       used by field borrow
13 │         let x = &mut s;
   │                 ^^^^^^ mutable borrow attempted here
14 │         *f;
   │         -- requirement enforced here

error: cannot mutably borrow since immutable references exist
   ┌─ tests/reference-safety/v1-tests/borrow_local_combo.move:21:17
   │
20 │         if (cond) f = &s.f else f = &s.g;
   │                       ----          ----
   │                       ││            ││
   │                       ││            │previous local borrow
   │                       ││            used by field borrow
   │                       │previous local borrow
   │                       used by field borrow
21 │         let x = &mut s;
   │                 ^^^^^^ mutable borrow attempted here
22 │         *f;
   │         -- requirement enforced here
